--- a/accounting.css
+++ b/accounting.css
@@ -1,4 +1,3 @@
-
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap');
 
 *{
@@ -36,51 +35,35 @@ a{
     font-size: 1.5rem;
 }
 
+body table{
+    margin-left: auto;
+    margin-right: auto;
+    text-align: left;
+    width: 50%;
+    border-style: solid;
 
-#formID{
-    text-align: center;
-    align-items:center;
-    padding: 1rem;
-    background-color: rgb(253, 229, 233);
-    font-size: 1.5rem;
 }
 
-select,button{
-    align-items:center;
+ table, th,td{
+    border: 1px solid;
+    text-align: center;
+    
+    }
+
+table{
+    background-color:rgb(224, 205, 209);
     font-size: 1rem;
 }
-
-
-div{
-    padding: 2rem;
-    margin: 2rem;
-    display: flex;
-    flex-direction: column;
-    flex-wrap: wrap;
-    justify-content:center;
+   
+th{
     background-color:rgb(171, 139, 145);
-    text-align: center;
 }
-
-#myMain{
-    display: flex;
-    flex-wrap: wrap; 
-    justify-content:center;
-    flex-direction: row;
-    align-items: center;
-    padding: 2rem;
-    top: 0;
-    right: 0;
-    left: 0;
-    background-color:rgb(224, 205, 209);
-}
-
-
 
 footer{
+    margin-top: 7rem;
     background-color: rgb(247, 200, 208);
     padding: 1rem ;
     text-align:center;
     padding: 2rem;
+    align-items: center;
 }
-
